Fix overflow scroll bug in modals

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,8 @@ input[type="checkbox"]:checked + label {
 button:disabled {
   opacity: 50%;
 }
+
+
+.modal-wrap {
+  height: 100%;
+}
